tests-integration/fixtures/checking/1772567400_derive_eq_partial/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Left :: forall (@a :: Type) (@b :: Type). (a :: Type) -> Either (a :: Type) (b :: Type)
Right :: forall (@a :: Type) (@b :: Type). (b :: Type) -> Either (a :: Type) (b :: Type)

Types
Either :: Type -> Type -> Type

Derived
derive forall (t :: Type). Eq (t :: Type) => Eq (Either Int (t :: Type))
derive forall (t :: Type). Eq (Either Int (t :: Type))

Roles
Either = [Representational, Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq (t :: Type)
  --> 9:1..9:34
  |
9 | derive instance Eq (Either Int b)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
